fix EventCard spacing

--- a/src/components/EventCard/EventCard.module.css
+++ b/src/components/EventCard/EventCard.module.css
@@ -2,7 +2,7 @@
   background: #fff;
   box-shadow: 0 8px 32px rgba(0, 0, 0, 0.16);
   /* width: 360px; */
-  width: 25%;
+  width: 30%;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
