--- a/src/pages/EventList/EventList.module.css
+++ b/src/pages/EventList/EventList.module.css
@@ -1,5 +1,5 @@
 .eventListContainer {
-  padding-bottom: 30px;
+  /* padding-bottom: 30px; */
 }
 
 .heroBannerWrapper {
@@ -7,17 +7,26 @@
   flex-direction: column;
   align-items: center;
   background-color: #ccc7c7;
+  padding: 30px 0;
+}
+
+.heroBannerWrapper h1 {
+  margin: 0;
+}
+
+.heroBannerWrapper p {
+  font-size: 0.9rem;
 }
 
 .searchContainer {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+  margin-top: 24px;
 }
 
 .categoryListWrapper {
-  padding: 0 30px;
-  margin-top: 30px;
+  padding: 30px 48px;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -31,8 +40,7 @@
 }
 
 .eventCardWrapper {
-  padding: 0 30px;
-  margin-top: 30px;
+  padding: 0 48px 30px 48px;
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
@@ -40,7 +48,7 @@
 
 .eventCardContainer {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-wrap: wrap;
-  gap: 2rem;
+  gap: 2.5rem;
 }
